# shfs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-clippy.yml
api/: Cargo.toml  README.md
api/src/: calls.rs  config.rs  filesystem_entry.rs  lib.rs  responses.rs  volume.rs
caching/: Cargo.toml  README.md
caching/src/: file.rs  lib.rs
client/: Cargo.toml  README.md
client/src/: lib.rs  server_connection.rs  udp_connection.rs  volume_connection.rs
fuse_fs/: Cargo.toml  README.md
fuse_fs/src/: lib.rs
networking/: Cargo.toml  README.md
networking/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: lib.rs
src/: main.rs
