[package]
name = "shfs_api"
version = "0.1.0"
authors = ["JMARyA <jmarya0@icloud.com>"]
edition = "2018"

[lib]
name = "shfs_api"
path = "src/lib.rs"

[dependencies]
path-absolutize = "3.0.6"
rich = { git = "https://github.com/JMARyA/rich" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
