[package]
name = "shfs_client"
version = "0.1.0"
authors = ["JMARyA <jmarya0@icloud.com>"]
edition = "2018"

[dependencies]
shfs_api = { path = "../api" }
shfs_caching = { path = "../caching" }
shfs_networking = { path = "../networking" }
tokio = { version = "1", features = ["full"] }
zstd = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rich = { git = "https://github.com/JMARyA/rich" }
